--- a/templates/login.html
+++ b/templates/login.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-
+    <!--Google signin button-->
     <div id="signinButton">
         <span class="g-signin" data-scope="openid email" data-clientid="898337299493-8ivtkiqb9s7jsocfjvmnb6543m5ubsqt.apps.googleusercontent.com" data-redirecturi="postmessage" data-accesstype="offline" data-cookiepolicy="single_host_origin" data-callback="signInCallback"
             data-approvalprompt="force">
         </span>
-
     </div>
 
     <div id="result"></div>
 
+    <!--Google signin script-->
     <script>
         function signInCallback(authResult) {
             if (authResult['code']) {
@@ -52,6 +52,68 @@
             }
         }
     </script>
+
+
+    <!--End Google Signin-->
+
+    <!--Facebook signin script-->
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId: '1405008942953636',
+                cookie: true,
+                xfbml: true,
+                version: 'v2.10'
+            });
+            FB.AppEvents.logPageView();
+        };
+
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+
+        // Run a test of the Graph API after login is successful
+        function sendTokenToServer() {
+            var access_token = FB.getAuthResponse()['accessToken'];
+            console.log(access_token)
+            console.log('Welcome! Fetching your information...');
+            FB.api('/me', function(response) {
+                console.log('Successful login for: ' + response.name);
+                $.ajax({
+                    type: 'POST',
+                    url: '/fbconnect?state={{STATE}}',
+                    processData: false,
+                    data: access_token,
+                    contentType: 'application/octet-stream; charset=utf-8',
+                    success: function(result) {
+                        // Handle or verify the server response if necessary
+                        if (result) {
+                            $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
+                            setTimeout(function() {
+                                window.location.href = "/restaurant";
+                            }, 4000);
+                        } else {
+                            $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                        }
+                    }
+                });
+            });
+        }
+    </script>
+
+    <!--Facebook signin button-->
+
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+        <a href="javascript:sendTokenToServer()">Login with Facebook</a>
+    </fb:login-button>
+
 
 </body>
 
