--- a/templates/menu.html
+++ b/templates/menu.html
@@ -58,8 +58,8 @@
             <h3>{{i.name}}</h3>
             <p>{{i.description}}</p>
             <p class="menu-price">{{i.price}}</p>
-            <a href='{{url_for(' editMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
-            <a href='{{url_for(' deleteMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+            <a href="{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Edit</a> |
+            <a href="{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Delete</a>
         </div>
         {% endif %} {% endfor %}
     </div>
@@ -70,8 +70,8 @@
             <h3>{{i.name}}</h3>
             <p>{{i.description}}</p>
             <p class="menu-price">{{i.price}}</p>
-            <a href='{{url_for(' editMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
-            <a href='{{url_for(' deleteMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+            <a href="{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Edit</a> |
+            <a href="{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Delete</a>
         </div>
         {% endif %} {% endfor %}
     </div>
@@ -82,8 +82,8 @@
             <h3>{{i.name}}</h3>
             <p>{{i.description}}</p>
             <p class="menu-price">{{i.price}}</p>
-            <a href='{{url_for(' editMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
-            <a href='{{url_for(' deleteMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+            <a href="{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Edit</a> |
+            <a href="{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Delete</a>
         </div>
         {% endif %} {% endfor %}
         <h2>Beverages</h2>
@@ -92,8 +92,8 @@
             <h3>{{i.name}}</h3>
             <p>{{i.description}}</p>
             <p class="menu-price">{{i.price}}</p>
-            <a href='{{url_for(' editMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
-            <a href='{{url_for(' deleteMenuItem ', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+            <a href="{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Edit</a> |
+            <a href="{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}">Delete</a>
         </div>
         {% endif %} {% endfor %}
     </div>
